refactor(security): simplify JWT and remove duplicate token generation